loader-fixed z-index

--- a/src/styles/core/other/_loader.less
+++ b/src/styles/core/other/_loader.less
@@ -33,6 +33,7 @@
 
 .loader--fixed {
   position: fixed;
+  z-index: @index--loader + 1;
 }
 
 .loader--html {
